--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -31,5 +31,5 @@ jobs:
       - name: wtf
         uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          access-token: ${{ secrets.SEKRED2 }}
+          access-token: ${{ secrets.ACCESS_TOKEN }}
  
