going to try this as well

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -3,7 +3,8 @@ name: build and deploy
 on:
   push:
     branches:
-      - source, reckless
+      - source
+      - reckless
 jobs:
   build:
     name: deploy
