Made additional changes to 227-ify front pages

--- a/package.json
+++ b/package.json
@@ -44,12 +44,9 @@
   "keywords": [
     "fullstack",
     "course",
-    "helsingin yliopisto",
-    "tietojenkäsittelytieteen osasto",
-    "mooc",
-    "mooc.fi",
+    "university of the pacific",
     "full stack",
-    "web-sovelluskehitys"
+    "comp227"
   ],
   "license": "Creative Commons BY-NC-SA 3.0",
   "scripts": {
