updated url to comp227/comp227

--- a/package.json
+++ b/package.json
@@ -71,6 +71,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/onzfonz/comp227"
+    "url": "https://github.com/comp227/comp227"
   }
 }
