made changes to markdown link checker

--- a/.github/workflows/.check_markdown_links_config.json
+++ b/.github/workflows/.check_markdown_links_config.json
@@ -1,13 +1,17 @@
 {
     "ignorePatterns": [
         {
-            "pattern": "^([0-9]{1,2}-[0-9A-Za-z-]+.html)"
+            "pattern": "//localhost"
+        },
+        {
+            "pattern": "example.com"
         }
     ],
     "retryOn429": true,
     "aliveStatusCodes": [
         200,
         403,
+        999,
         429
     ]
 }
