--- a/.github/workflows/.check_markdown_links_config.json
+++ b/.github/workflows/.check_markdown_links_config.json
@@ -5,6 +5,9 @@
         },
         {
             "pattern": "example.com"
+        },
+        {
+            "pattern": "^/part[0-9]+"
         }
     ],
     "retryOn429": true,
