Doing the markdown link thing finally

--- a/.github/workflows/.check_markdown_links_config.json
+++ b/.github/workflows/.check_markdown_links_config.json
@@ -28,6 +28,12 @@
         },
         {
             "pattern": "https://studies.cs.helsinki.fi/exampleapp/new_note"
+        },
+        {
+            "pattern": "web.archive.org"
+        },
+        {
+            "pattern": "recharts.org"
         }
 
     ],
