fixing more broken links

--- a/.github/workflows/.check_markdown_links_config.json
+++ b/.github/workflows/.check_markdown_links_config.json
@@ -34,11 +34,18 @@
         },
         {
             "pattern": "recharts.org"
+        },
+        {
+            "pattern": "227demo.djosv"
+        },
+        {
+            "pattern": "onrender.com"
         }
 
     ],
     "retryOn429": true,
     "aliveStatusCodes": [
+        0,
         200,
         403,
         429,
